--- a/metadata.yaml
+++ b/metadata.yaml
@@ -46,6 +46,7 @@ subjects:
 - !lcsh 'Tocqueville, Alexis de, 1805-1859'
 - !lcsh 'Tocqueville, Alexis de, 1805-1859 -- Correspondence'
 - !lcsh 'Senior, Nassau William, 1790-1864 -- Correspondence'
+- GITenberg
 title: Correspondence & Conversations of Alexis de Tocqueville with Nassau William
   Senior from 1834 to 1859, Volume 2
 url: http://www.gutenberg.org/ebooks/13333
